    format

2007-05-25 cjg
 * Corrected the way the security.pl config file gets the remote IP.

2007-05-25 cjg
 * Fixed conf_id/confid typo in Backcompatability

2007-05-25 cjg
 * Textonly pins now don't expand. Fixing a bug that {} in titles caused
    an error.

2007-05-25 tdb
 * Pretty-printing from POD tester
 * Strip prefixes from noxmlns to_string output (bug fix for XML::LibXML)

2007-05-25 cjg
 * Fixed typo in the textonly pins change
 * bin/import now has an option to use ids from the data file
 * counters are now set to the minimum of their current value and the 
    last eprintid,userid when an eprint/user is added.
 * $obj->exists_and_set now uses has_field instead of get_field which
    should prevent the annoying warning.

2007-05-29 cjg
 * Creating eprint now returns undef if add_record fails (eg. that the id
    already exists)
 * 2 new configure options: enable_import_ids and enable_import_datestamps
 * Corrected documentation on time/date system fields in EPrints dataobjs
 * Clarified error message when (failing in) writing an item with a existing
    ID.
 * XML plugin warnings now use absolute phrase paths, so that you don't need
    to keep duplicating the same phrase for multiple plugins.
 * Added warnings to import-from-file code if the source file does not 
    exist, or if from-file imports are disabled.
 * import-from-file no longer deletes first file.
 * Added new options to import to allow correct importing of migration data.
  
2007-05-29 cjg
 * Added an example to security.pl

2007-05-30 cjg
 * Fixed warning when pagerange met non digit data.

2007-06-05 cjg
 * Fixed bug with "dir" when importing migration data.

2007-06-05 cjg
 * Fixed stray warning when a zero byte file is added to a document.
 * Fixed some problems with importing files with "/" or " " in the title.
    When create_from_data is passed a filename then it is used as-is, but
    checks for things like ../ still.
